force-app/main/default/objects/Ghost_QuoteLine_Reconciliation__c/Ghost_QuoteLine_Reconciliation__c.object-meta.xml
<CustomObject>
    <label>Ghost QuoteLine Reconciliation</label>
    <nameField>
        <label>Ghost QuoteLine Reconciliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ghost QuoteLine Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>