force-app/main/default/objects/Ghost_QuoteLine_Reconciliation__c/fields/Assoicated_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Assoicated_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the subscription that links the Quote Line to the Opportunity Line Item</description>
    <inlineHelpText>Lookup to the subscription that links the Quote Line to the Opportunity Line Item</inlineHelpText>
    <label>Assoicated Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Ghost QuoteLine Reconciliations</relationshipLabel>
    <relationshipName>Ghost_QuoteLine_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>