force-app/main/default/objects/Ghost_QuoteLine_Reconciliation__c/fields/OLI_Field_Payload__c.field-meta.xml
<CustomField>
    <fullName>OLI_Field_Payload__c</fullName>
    <label>OLI Field Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>