force-app/main/default/objects/Ghost_QuoteLine_Reconciliation__c/fields/Processed_On__c.field-meta.xml
<CustomField>
    <fullName>Processed_On__c</fullName>
    <label>Processed On</label>
    <type>DateTime</type>
</CustomField>