force-app/main/default/objects/Ghost_QuoteLine_Reconciliation__c/fields/Processing_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error_Message__c</fullName>
    <label>Processing Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>